Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -152,7 +152,7 @@ $(function(){
 					<a href="<{:U('SubJobHospital/index')}>" target="rightFrame">疫苗医院</a>
 				</li>
 				<li><cite></cite>
-					<a href="<{:U('SubPhone/index')}>" target="rightFrame">每日电话提报</a>
+					<a href="<{:U('SubPhone/index')}>" target="rightFrame">电话提报管理</a>
 				</li>
 			</ul>
 		</dd>
