--- a/tp/Admin/Tpl/SubMoneyLog/index.html
+++ b/tp/Admin/Tpl/SubMoneyLog/index.html
@@ -70,7 +70,7 @@
 			</span>
 			</if>
 			<b onclick="search()">搜索</b>
-			<a href="<{:U('daochu',array('start_date'=>$start_date,'end_date'=>$end_date))}>"><b onclick="search()">导出到excel</b></a>
+			<a href="<{:U('daochu',array('start_date'=>$start_date,'end_date'=>$end_date))}>"><b>导出到excel</b></a>
 		</li>
 		</ul>
 		</form>
