--- a/tp/Admin/Tpl/SubMoneyLog/all.html
+++ b/tp/Admin/Tpl/SubMoneyLog/all.html
@@ -92,6 +92,13 @@
 			<br /><a href="<{:U('ApplistHptShopOrder/index',array('start_date'=>$start_date,'end_date'=>$end_date,'pay_type'=>1))}>">余额：<{$sum_row['yue']|default=0}></a>
 			<br /><a href="<{:U('ApplistHptShopOrder/index',array('start_date'=>$start_date,'end_date'=>$end_date,'pay_type'=>2))}>">微信：<{$sum_row['wx']|default=0}></a>
 		</div>
+		<div class="top_div">
+			<{$start_date}>
+			<br />至
+			<br /><{$end_date}>
+			<br />商城支出
+			<br /><a href="<{:U('ApplistHptShopOrder/out',array('start_date'=>$start_date,'end_date'=>$end_date))}>">￥<{$sum_row['out']|default=0}></a>
+		</div>
 		
 		<div style="width:100%;height:10px;clear:both;border-bottom:1px solid;border-style:dashed;"></div>
 		<div style="color:#01B4EC;font-size:16px;font-weight:bold;margin:10px;">金额日志记录：</div>
