--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -73,6 +73,9 @@ $(function(){
 				<li><cite></cite>
 					<a href="<{:U('SubOut/index')}>" target="rightFrame">提现管理</a>
 				</li>
+				<li><cite></cite>
+					<a href="<{:U('ApplistHptShopOrder/daochu_page')}>" target="rightFrame">商城报表导出</a>
+				</li>
 			</ul>
 		</dd>
 	</if>
