--- a/tp/Admin/Tpl/SubMoneyLog/all.html
+++ b/tp/Admin/Tpl/SubMoneyLog/all.html
@@ -84,7 +84,7 @@
 			<br />个人充值
 			<br /><a href="<{:U('SubCz/index',array('start_date'=>$start_date,'end_date'=>$end_date))}>">￥<{$sum_row['type1']|default=0}></a>
 		</div>
-		<div class="top_div">
+		<!-- <div class="top_div">
 			<{$start_date}>
 			<br />至
 			<br /><{$end_date}>
@@ -98,7 +98,7 @@
 			<br /><{$end_date}>
 			<br />商城支出
 			<br /><a href="<{:U('ApplistHptShopOrder/out',array('start_date'=>$start_date,'end_date'=>$end_date))}>">￥<{$sum_row['out']|default=0}></a>
-		</div>
+		</div> -->
 		
 		<div style="width:100%;height:10px;clear:both;border-bottom:1px solid;border-style:dashed;"></div>
 		<div style="color:#01B4EC;font-size:16px;font-weight:bold;margin:10px;">金额日志记录：</div>
