Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/SubAgent/discount_add.html
+++ b/tp/Admin/Tpl/SubAgent/discount_add.html
@@ -50,6 +50,9 @@ $(function(){$('.date_picker').date_input();})
 </div>
 <script type="text/javascript">
 function save(){
+	if($("input[name='discount']").val() > 1){
+		alert_tip('折扣不能大于1');return;
+	}
 	$('#memberform').submit();
 }
 </script>
