Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/SubAgent/discount_add.html
+++ b/tp/Admin/Tpl/SubAgent/discount_add.html
@@ -36,7 +36,7 @@ $(function(){$('.date_picker').date_input();})
 			<ul class="forminfo">
 				<li>
 					<label>代理商拥有的折扣<b>*</b></label>
-					<input type="text" name="discount" value="<{$vo.v}>" class="dfinput yaheifont"><b>（0.8代表8折，0.95代表95折）</b>
+					<input type="text" name="discount" value="<{$vo.v}>" class="dfinput yaheifont"><b>（0.8代表八折，0.95代表九五折）</b>
 				</li>
 				<li>
 					<label>&nbsp;</label>
