--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -84,11 +84,11 @@ $(function(){
 			<span><img src="__PUBLIC__/admin/images/leftico03.png" /></span>推荐人管理
 		</div>
 		<ul class="menuson">
-			<!-- <li><cite></cite>
-				<a href="<{:U('SubTjr/set')}>" target="rightFrame">推荐人奖励设置</a>
-			</li> -->
 			<li><cite></cite>
 				<a href="<{:U('SubTjr/index')}>" target="rightFrame">推荐人列表</a>
+			</li>
+			<li><cite></cite>
+				<a href="<{:U('SubAgent/tjr')}>" target="rightFrame">代理商推荐人</a>
 			</li>
 		</ul>
 	</dd>
