--- a/tp/Admin/Tpl/SubAgent/discount_add.html
+++ b/tp/Admin/Tpl/SubAgent/discount_add.html
@@ -27,6 +27,7 @@ $(function(){$('.date_picker').date_input();})
 		<ul>
 			<li><a href="<{:U('index')}>">申请列表</a></li>
 			<li><a href="<{:U('discount_add')}>" class="selected">折扣设置</a></li>
+			<li><a href="<{:U('lists')}>">代理商列表</a></li>
 			<li><a href="<{:U('all')}>">数据统计</a></li>
 		</ul>
 		</div>
