--- a/tp/Admin/Tpl/SubAgent/index.html
+++ b/tp/Admin/Tpl/SubAgent/index.html
@@ -37,6 +37,7 @@
 		<ul>
 			<li><a href="<{:U('index')}>" class="selected">申请列表</a></li>
 			<li><a href="<{:U('discount_add')}>">折扣设置</a></li>
+			<li><a href="<{:U('lists')}>">代理商列表</a></li>
 			<li><a href="<{:U('all')}>">数据统计</a></li>
 		</ul>
 	</div>
