--- a/tp/Admin/Tpl/SubAgent/lists.html
+++ b/tp/Admin/Tpl/SubAgent/lists.html
@@ -33,20 +33,11 @@
 		<ul>
 			<li><a href="<{:U('index')}>">申请列表</a></li>
 			<li><a href="<{:U('discount_add')}>">折扣设置</a></li>
-			<li><a href="<{:U('lists')}>">代理商列表</a></li>
-			<li><a href="<{:U('all')}>" class="selected">数据统计</a></li>
+			<li><a href="<{:U('lists')}>" class="selected">代理商列表</a></li>
+			<li><a href="<{:U('all')}>">数据统计</a></li>
 		</ul>
 	</div>
 	<div class="tools" style="margin-top:10px;">
-		<ul class="toolbar">
-			<li class="click" style="padding-left:5px;">
-				共<b style="color:red;"><{$num}></b>单
-				，总额￥<b style="color:red;"><{$money}></b>(每单减12物流费)
-				，返现金额￥<b style="color:red;"><{$return_money}></b>
-				，税金￥<b style="color:red;"><{$tax}></b>
-				，实返现额￥<b style="color:red;"><{$final_money}></b>
-			</li>
-		</ul>
 		<form action="" name="searchForm" method="get">
 		<input type="hidden" name='m' value='<{$moduleName}>' />
 		<input type="hidden" name='a' value="<{$actionName}>" />
@@ -54,39 +45,26 @@
 			<span>
 				<input type="text" name="num" placeholder="请输入代理商编号" value="<{:I('get.num')}>" />
 			</span>
-			<span style="margin-top:0;">
-				<input type="text" class="date_picker" name="start_date" value="<{$start_date}>" />&nbsp;&nbsp;&nbsp;&nbsp;—
-			</span>
-			<span style="margin-top:0;">
-				<input type="text" class="date_picker" name="end_date" value="<{$end_date}>" />&nbsp;
-			</span>
 			<b onclick="search()">搜索</b>
-			<a href="<{:U('daochu',array('num'=>$_GET['num'],'start_date'=>$start_date,'end_date'=>$end_date))}>"><b>导出到excel</b></a>
 		</li></ul>
 		</form>
 	</div>
 	<table class="imgtable">
 		<thead>
 			<tr>
-				<th>订单号</th>
-				<th>金额</th>
-				<th>收货人</th>
 				<th>代理商编号</th>
 				<th>代理商姓名</th>
 				<th>代理商手机</th>
-				<th>支付时间</th>
+				<th>查看下属用户</th>
 			</tr>
 		</thead>
 		<tbody>
-			<foreach name="list['data']" item='v'>
+			<foreach name="list" item='v'>
 			<tr>
-				<td><{$v.id}></td>
-				<td>￥<{$v.money}></td>
-				<td><{$v.name}>-<{$v.tel}></td>
 				<td><{$v.agent_num}></td>
-				<td><{$v.agent_name}></td>
-				<td><{$v.agent_tel}></td>
-				<td><{$v.pay_time}></td>
+				<td><{$v.nickname}></td>
+				<td><{$v.username}></td>
+				<td><a href="<{:U('lists_member',array('num'=>$v['agent_num']))}>">查看</a></td>
 			</tr>
 			</foreach>
 		</tbody>
@@ -99,17 +77,6 @@
 </div>
 <script type="text/javascript">
 function search(){
-	if($("input[name='start_date']").val()=='' && $("input[name='end_date']").val()!=''){
-		alert_tip('请选择开始日期');return;
-	}
-	if($("input[name='start_date']").val()!='' && $("input[name='end_date']").val()==''){
-		alert_tip('请选择结束日期');return;
-	}
-	var start_date_val=parseInt($("input[name='start_date']").val().replace(/-/g,""));
-	var end_date_val=parseInt($("input[name='end_date']").val().replace(/-/g,""));
-	if(start_date_val > end_date_val){
-		alert_tip('开始日期不能大于结束日期');return;
-	}
 	document.searchForm.submit();
 }
 </script>
