--- a/tp/Admin/Tpl/SubAgent/tjr.html
+++ b/tp/Admin/Tpl/SubAgent/tjr.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>后台管理</title>
 <link href="__PUBLIC__/admin/css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="__PUBLIC__/js/jquery.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/admin/js/jquery.js"></script>
 <script type="text/javascript" src="__PUBLIC__/admin/js/alert-tip.js"></script>
 <script language="javascript">
 	$(function() {
@@ -29,22 +29,13 @@
 </head>
 <body>
 <div class="rightinfo">
-	<div class="itab">
-		<ul>
-			<li><a href="<{:U('index')}>">申请列表</a></li>
-			<li><a href="<{:U('discount_add')}>">折扣设置</a></li>
-			<li><a href="<{:U('lists')}>">代理商列表</a></li>
-			<li><a href="<{:U('all')}>" class="selected">数据统计</a></li>
-		</ul>
-	</div>
-	<div class="tools" style="margin-top:10px;">
+	<form action="" name="searchForm" method="get">
+	<input type="hidden" name='m' value='<{$moduleName}>' />
+	<input type="hidden" name='a' value="<{$actionName}>" />
+	<div class="tools">
 		<ul class="toolbar">
 			<li class="click" style="padding-left:5px;">
-				共<b style="color:red;"><{$num}></b>单
-				，总额￥<b style="color:red;"><{$money}></b>(每单减12物流费)
-				，返现金额￥<b style="color:red;"><{$return_money}></b>
-				，税金￥<b style="color:red;"><{$tax}></b>
-				，实返现额￥<b style="color:red;"><{$final_money}></b>
+				人数：<{$count_num}>
 			</li>
 		</ul>
 		<form action="" name="searchForm" method="get">
@@ -52,50 +43,38 @@
 		<input type="hidden" name='a' value="<{$actionName}>" />
 		<ul class="toolbar1"><li>
 			<span>
-				<input type="text" name="num" placeholder="请输入代理商编号" value="<{:I('get.num')}>" />
+				<input type="text" name="num" placeholder="请输入推荐人编号" value="<{:I('get.num')}>" />
 			</span>
 			<span style="margin-top:0;">
 				<input type="text" class="date_picker" name="start_date" value="<{$start_date}>" />&nbsp;&nbsp;&nbsp;&nbsp;—
 			</span>
 			<span style="margin-top:0;">
-				<input type="text" class="date_picker" name="end_date" value="<{$end_date}>" />&nbsp;
+				<input type="text" class="date_picker" name="end_date" value="<{$end_date}>" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</span>
 			<b onclick="search()">搜索</b>
-			<a href="<{:U('daochu',array('num'=>$_GET['num'],'start_date'=>$start_date,'end_date'=>$end_date))}>"><b>导出到excel</b></a>
 		</li></ul>
 		</form>
 	</div>
 	<table class="imgtable">
 		<thead>
 			<tr>
-				<th>订单号</th>
-				<th>金额</th>
-				<th>收货人</th>
-				<th>代理商编号</th>
-				<th>代理商姓名</th>
-				<th>代理商手机</th>
-				<th>支付时间</th>
+				<th>推荐人编号</th>
+				<th>推荐人</th>
+				<th>注册人</th>
+				<th>注册日期</th>
 			</tr>
 		</thead>
 		<tbody>
-			<foreach name="list['data']" item='v'>
-			<tr>
-				<td><{$v.id}></td>
-				<td>￥<{$v.money}></td>
-				<td><{$v.name}>-<{$v.tel}></td>
-				<td><{$v.agent_num}></td>
-				<td><{$v.agent_name}></td>
-				<td><{$v.agent_tel}></td>
-				<td><{$v.pay_time}></td>
+			<foreach name="list" item='v'>
+			<tr style="height:25px;">
+				<td><{$v.my_num}></td>
+				<td><{$v.tjr}></td>
+				<td><{$v.nickname}>-<{$v.username}></td>
+				<td><{$v.addtime}></td>
 			</tr>
 			</foreach>
 		</tbody>
 	</table>
-	<div class="pagin">
-		<ul class="paginList">
-			<{$list['page']}>
-		</ul>
-	</div>
 </div>
 <script type="text/javascript">
 function search(){
